--- a/index.html
+++ b/index.html
@@ -14,21 +14,20 @@
             md: { max: "768px" },
             sm: { max: "576px" },
           },
-          extend: {},
         },
       };
     </script>
   </head>
-  <body class="bg-[#74839b] mt-36 p-0 flex justify-center sm:mt-0">
-    <div class="block text-center bg-black/20 w-[27rem] space-y-6 p-12 border rounded-2xl sm:w-full sm:h-screen sm:border-none sm:rounded-none">
+  <body class="bg-[#74839b] mt-36 flex justify-center sm:mt-0">
+    <div class="block text-center bg-black/20 w-[27rem] space-y-6 p-12 rounded-2xl sm:w-full sm:h-screen sm:rounded-none">
       <div class="text-xl text-white">Convert <span class="celsius">°C</span> to <span class="fahrenheit">°F</span></div>
-      <input type="text" placeholder="°C" class="input outline-none border border-black rounded pl-2 py-2 w-9/12" />
+      <input type="text" placeholder="°C" class="input outline-none rounded pl-2 py-2 w-9/12" />
       <div class="result text-md text-white underline hidden">
         <p>0 °C is 32 °F</p>
       </div>
-      <button class="convert bg-black/30 text-white text-sm border rounded py-2 w-9/12 hover:bg-black/50">Convert</button>
-      <button class="reset bg-black/30 text-white text-sm border rounded py-2 w-9/12 hover:bg-black/50">Reset</button>
-      <button class="change bg-black/30 text-white text-sm border rounded py-2 w-9/12 hover:bg-black/50">Change</button>
+      <button class="convert bg-black/30 text-white text-sm rounded py-2 w-9/12 hover:bg-black/50">Convert</button>
+      <button class="reset bg-black/30 text-white text-sm rounded py-2 w-9/12 hover:bg-black/50">Reset</button>
+      <button class="change bg-black/30 text-white text-sm rounded py-2 w-9/12 hover:bg-black/50">Change</button>
     </div>
     <script src="styles.js"></script>
   </body>
